--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   webview_flutter: ^1.0.7
   http: ^0.12.2
   flutter_offline: ^0.3.0
-
-dependency_overrides:
-  flutter_offline: ^0.3.0
-  connectivity: ^2.0.2
+  sqflite: ^1.3.2+2
+  url_launcher: ^5.7.10
+  easy_localization:
+  file_picker: ^1.13.0+1
 
 dev_dependencies:
   flutter_test:
@@ -55,9 +55,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/lang/en.json
+    - assets/lang/gu.json
+    - assets/lang/hi.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
